--- a/notebooks/analyse.ipynb
+++ b/notebooks/analyse.ipynb
@@ -19,7 +19,10 @@
     "\n",
     "from dotenv import load_dotenv\n",
     "import matplotlib.pyplot as pl\n",
+    "from matplotlib.lines import Line2D\n",
+    "from matplotlib.patches import Patch\n",
     "import numpy as np\n",
+    "import pandas as pd\n",
     "import xarray as xr"
    ]
   },
@@ -32,6 +35,32 @@
    "source": [
     "load_dotenv()\n",
     "datadir = os.getenv(\"DATADIR\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cd5449ae-3383-4960-96f1-ea3b3d326cba",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pl.style.use('../defaults.mplstyle')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "755ce85c-8f94-407a-93e9-8e2e669beacb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "colors = {\n",
+    "    'ssp119': '#00a9cf',\n",
+    "    'ssp126': '#003466',\n",
+    "    'ssp245': '#f69320',\n",
+    "    'ssp370': '#df0000',\n",
+    "    'ssp585': '#980002'\n",
+    "}"
    ]
   },
   {
@@ -83,7 +112,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pl.fill_between(\n",
+    "fig, ax = pl.subplots(1, 2, figsize=(18/2.54, 9/2.54))\n",
+    "ax[0].fill_between(\n",
     "    ds_140.timebound, (\n",
     "        ds_140.temperature.loc[dict(layer=0, scenario='ssp119')] -\n",
     "        np.average(ds_140.temperature.loc[dict(layer=0, scenario='ssp119', timebound=np.arange(1850, 1902))], weights=weight51, axis=0)\n",
@@ -95,16 +125,16 @@
     "    alpha=0.1,\n",
     "    lw=0\n",
     ");\n",
-    "pl.plot(\n",
+    "ax[0].plot(\n",
     "    ds_140.timebound, (\n",
     "        ds_140.temperature.loc[dict(layer=0, scenario='ssp119')] -\n",
     "        np.average(ds_140.temperature.loc[dict(layer=0, scenario='ssp119', timebound=np.arange(1850, 1902))], weights=weight51, axis=0)\n",
     "    ).median(dim='config'),\n",
     "    color='k',\n",
-    "    label='v1.4.0'\n",
+    "    label='calibration v1.4.0'\n",
     ");\n",
     "\n",
-    "pl.fill_between(\n",
+    "ax[0].fill_between(\n",
     "    ds_141.timebound, (\n",
     "        ds_141.temperature.loc[dict(layer=0, scenario='ssp119')] -\n",
     "        np.average(ds_141.temperature.loc[dict(layer=0, scenario='ssp119', timebound=np.arange(1850, 1902))], weights=weight51, axis=0)\n",
@@ -116,18 +146,94 @@
     "    alpha=0.1,\n",
     "    lw=0\n",
     ");\n",
-    "pl.plot(\n",
+    "ax[0].plot(\n",
     "    ds_141.timebound, (\n",
     "        ds_141.temperature.loc[dict(layer=0, scenario='ssp119')] -\n",
     "        np.average(ds_141.temperature.loc[dict(layer=0, scenario='ssp119', timebound=np.arange(1850, 1902))], weights=weight51, axis=0)\n",
     "    ).median(dim='config'),\n",
     "    color='r',\n",
-    "    label='v1.4.1'\n",
+    "    label='calibration v1.4.1'\n",
     ");\n",
-    "pl.legend()\n",
-    "#pl.xlim(2000, 2040)\n",
-    "#pl.ylim(0.7, 1.8)\n",
-    "pl.title('SSP1-1.9 median warming')"
+    "ax[0].set_xlim(1850, 2300)\n",
+    "ax[0].set_ylim(-0.5, 2.5)\n",
+    "ax[0].legend(loc='lower right')\n",
+    "ax[0].set_title('(a) SSP1-1.9 fair projections')\n",
+    "\n",
+    "ax[1].fill_between(\n",
+    "    ds_140.timebound, (\n",
+    "        ds_140.temperature.loc[dict(layer=0, scenario='ssp585')] -\n",
+    "        np.average(ds_140.temperature.loc[dict(layer=0, scenario='ssp585', timebound=np.arange(1850, 1902))], weights=weight51, axis=0)\n",
+    "    ).quantile(0.05, dim='config'), (\n",
+    "        ds_140.temperature.loc[dict(layer=0, scenario='ssp585')] -\n",
+    "        np.average(ds_140.temperature.loc[dict(layer=0, scenario='ssp585', timebound=np.arange(1850, 1902))], weights=weight51, axis=0)\n",
+    "    ).quantile(0.95, dim='config'),\n",
+    "    color='k',\n",
+    "    alpha=0.1,\n",
+    "    lw=0\n",
+    ");\n",
+    "ax[1].plot(\n",
+    "    ds_140.timebound, (\n",
+    "        ds_140.temperature.loc[dict(layer=0, scenario='ssp585')] -\n",
+    "        np.average(ds_140.temperature.loc[dict(layer=0, scenario='ssp585', timebound=np.arange(1850, 1902))], weights=weight51, axis=0)\n",
+    "    ).median(dim='config'),\n",
+    "    color='k',\n",
+    "    label='calibration v1.4.0'\n",
+    ");\n",
+    "\n",
+    "ax[1].fill_between(\n",
+    "    ds_141.timebound, (\n",
+    "        ds_141.temperature.loc[dict(layer=0, scenario='ssp585')] -\n",
+    "        np.average(ds_141.temperature.loc[dict(layer=0, scenario='ssp585', timebound=np.arange(1850, 1902))], weights=weight51, axis=0)\n",
+    "    ).quantile(0.05, dim='config'), (\n",
+    "        ds_141.temperature.loc[dict(layer=0, scenario='ssp585')] -\n",
+    "        np.average(ds_141.temperature.loc[dict(layer=0, scenario='ssp585', timebound=np.arange(1850, 1902))], weights=weight51, axis=0)\n",
+    "    ).quantile(0.95, dim='config'),\n",
+    "    color='r',\n",
+    "    alpha=0.1,\n",
+    "    lw=0\n",
+    ");\n",
+    "ax[1].plot(\n",
+    "    ds_141.timebound, (\n",
+    "        ds_141.temperature.loc[dict(layer=0, scenario='ssp585')] -\n",
+    "        np.average(ds_141.temperature.loc[dict(layer=0, scenario='ssp585', timebound=np.arange(1850, 1902))], weights=weight51, axis=0)\n",
+    "    ).median(dim='config'),\n",
+    "    color='r',\n",
+    "    label='calibration v1.4.1'\n",
+    ");\n",
+    "ax[1].set_xlim(1850, 2300)\n",
+    "ax[1].set_ylim(-0.5, 10)\n",
+    "ax[1].legend(loc='lower right')\n",
+    "ax[1].set_title('(b) SSP5-8.5 fair projections')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cf1e5c3e-20ed-46ea-ba0c-de8fb23a17d6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(\n",
+    "    (\n",
+    "        ds_141.temperature.loc[dict(layer=0, scenario='ssp119')] -\n",
+    "        np.average(ds_141.temperature.loc[dict(layer=0, scenario='ssp119', timebound=np.arange(1850, 1902))], weights=weight51, axis=0)\n",
+    "    ).median(dim='config')\n",
+    ").max().data[()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3d70d2dd-c108-46c5-98f6-d9af6ef3f962",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(\n",
+    "    (\n",
+    "        ds_140.temperature.loc[dict(layer=0, scenario='ssp119')] -\n",
+    "        np.average(ds_140.temperature.loc[dict(layer=0, scenario='ssp119', timebound=np.arange(1850, 1902))], weights=weight51, axis=0)\n",
+    "    ).median(dim='config')\n",
+    ").max().data[()]"
    ]
   },
   {
@@ -198,8 +304,18 @@
     "    label='v1.4.1 (GCP)'\n",
     ");\n",
     "pl.xlim(1750, 2100)\n",
-    "pl.legend()\n",
+    "#pl.legend()\n",
     "pl.title('SSP1-1.9 median CO2 concentration')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "25098416-f551-49af-a8e5-0cd7f5aeae62",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_cmip6 = pd.read_csv('../data/concentrations/co2_concentrations.csv')"
    ]
   },
   {
@@ -209,42 +325,111 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pl.fill_between(\n",
-    "    ds_140.timebound,\n",
-    "    ds_140.concentration.loc[dict(specie='CO2', scenario='ssp585')].quantile(0.05, dim='config'),\n",
-    "    ds_140.concentration.loc[dict(specie='CO2', scenario='ssp585')].quantile(0.95, dim='config'),\n",
-    "    color='k',\n",
-    "    alpha=0.1,\n",
-    "    lw=0\n",
-    ");\n",
-    "pl.plot(\n",
-    "    ds_140.timebound, (\n",
-    "        ds_140.concentration.loc[dict(specie='CO2', scenario='ssp585')]\n",
-    "    ).median(dim='config'),\n",
-    "    color='k',\n",
-    "    label='v1.4.0 (RCMIP)'\n",
-    ");\n",
+    "fig, ax = pl.subplots(1,2, figsize=(18/2.54, 9/2.54))\n",
     "\n",
-    "pl.fill_between(\n",
-    "    ds_141.timebound,\n",
-    "    ds_141.concentration.loc[dict(specie='CO2', scenario='ssp585')].quantile(0.05, dim='config'),\n",
-    "    ds_141.concentration.loc[dict(specie='CO2', scenario='ssp585')].quantile(0.95, dim='config'),\n",
-    "    color='r',\n",
-    "    alpha=0.1,\n",
-    "    lw=0\n",
+    "for scenario in ['ssp119', 'ssp126', 'ssp245', 'ssp370', 'ssp585']:\n",
+    "    ax[0].plot(\n",
+    "        np.arange(2014.5, 2031), (\n",
+    "            ds_140.emissions.loc[dict(specie='CO2', scenario=scenario, config=0, timepoint=np.arange(2014.5, 2031))]\n",
+    "        ),\n",
+    "        color=colors[scenario],\n",
+    "        label='v1.4.0 (RCMIP)',\n",
+    "        ls=':'\n",
+    "    );\n",
+    "    ax[0].plot(\n",
+    "        np.arange(2022.5, 2031), (\n",
+    "            ds_141.emissions.loc[dict(specie='CO2', scenario=scenario, config=0, timepoint=np.arange(2022.5, 2031))]\n",
+    "        ),\n",
+    "        color=colors[scenario],\n",
+    "        label='v1.4.1 (GCP)'\n",
+    "    );\n",
+    "# overwrite history in black\n",
+    "ax[0].plot(\n",
+    "    np.arange(1999.5, 2015), (\n",
+    "        ds_140.emissions.loc[dict(specie='CO2', scenario=scenario, config=0, timepoint=np.arange(1999.5, 2015))]\n",
+    "    ),\n",
+    "    color='k',\n",
+    "    label='v1.4.0 (RCMIP)',\n",
+    "    ls=':'\n",
     ");\n",
-    "pl.plot(\n",
-    "    ds_141.timebound, (\n",
-    "        ds_141.concentration.loc[dict(specie='CO2', scenario='ssp585')]\n",
-    "    ).median(dim='config'),\n",
-    "    color='r',\n",
+    "ax[0].plot(\n",
+    "    np.arange(1999.5, 2023), (\n",
+    "        ds_141.emissions.loc[dict(specie='CO2', scenario=scenario, config=0, timepoint=np.arange(1999.5, 2023))]\n",
+    "    ),\n",
+    "    color='k',\n",
     "    label='v1.4.1 (GCP)'\n",
     ");\n",
+    "ax[0].set_xlim(2000, 2030)\n",
+    "ax[0].set_ylim(25, 55)\n",
+    "ax[0].set_ylabel('Gt CO$_2$ yr$^{-1}$')\n",
+    "ax[0].set_title('(a) CO$_2$ emissions')\n",
     "\n",
-    "pl.xlim(1850, 2100)\n",
-    "pl.ylim(200, 1200)\n",
-    "pl.legend()\n",
-    "pl.title('SSP5-8.5 median CO2 concentration')"
+    "\n",
+    "for scenario in ['ssp119', 'ssp126', 'ssp245', 'ssp370', 'ssp585']:\n",
+    "    # ax.fill_between(\n",
+    "    #     ds_140.timebound,\n",
+    "    #     ds_140.concentration.loc[dict(specie='CO2', scenario=scenario)].quantile(0.05, dim='config'),\n",
+    "    #     ds_140.concentration.loc[dict(specie='CO2', scenario=scenario)].quantile(0.95, dim='config'),\n",
+    "    #     color='k',\n",
+    "    #     alpha=0.1,\n",
+    "    #     lw=0\n",
+    "    # );\n",
+    "    ax[1].plot(\n",
+    "        ds_140.timebound, (\n",
+    "            ds_140.concentration.loc[dict(specie='CO2', scenario=scenario)]\n",
+    "        ).median(dim='config'),\n",
+    "        color=colors[scenario],\n",
+    "        #label='v1.4.0 (RCMIP)',\n",
+    "        ls=':',\n",
+    "    );\n",
+    "    \n",
+    "    ax[1].fill_between(\n",
+    "        ds_141.timebound,\n",
+    "        ds_141.concentration.loc[dict(specie='CO2', scenario=scenario)].quantile(0.05, dim='config'),\n",
+    "        ds_141.concentration.loc[dict(specie='CO2', scenario=scenario)].quantile(0.95, dim='config'),\n",
+    "        color=colors[scenario],\n",
+    "        alpha=0.25,\n",
+    "        lw=0\n",
+    "    );\n",
+    "    ax[1].plot(\n",
+    "        ds_141.timebound, (\n",
+    "            ds_141.concentration.loc[dict(specie='CO2', scenario=scenario)]\n",
+    "        ).median(dim='config'),\n",
+    "        color=colors[scenario],\n",
+    "        #label='v1.4.1 (GCP)'\n",
+    "    );\n",
+    "    ax[1].plot(\n",
+    "        np.arange(1850.5, 2101),\n",
+    "        df_cmip6.loc[df_cmip6['Scenario']==scenario, '1850':'2100'].values.squeeze(),\n",
+    "        color=colors[scenario],\n",
+    "        lw=0.5,\n",
+    "    )\n",
+    "\n",
+    "ax[1].set_xlim(2000, 2100)\n",
+    "ax[1].set_ylim(300, 1200)\n",
+    "ax[1].set_ylabel('ppm')\n",
+    "ax[1].set_title('(b) CO$_2$ concentration')\n",
+    "\n",
+    "legend_elements = [\n",
+    "    Patch(facecolor='k', lw=0, alpha=0.25, label='Calibration v1.4.1 5-95% range'),\n",
+    "    Line2D([0], [0], color='k', label='Calibration v1.4.1 median'),\n",
+    "    Line2D([0], [0], color='k', ls=':', label='Calibration v1.4.0 median'),\n",
+    "    Line2D([0], [0], color='k', lw=0.3, label='CMIP6 (Meinshausen et al. 2020)'),\n",
+    "    Line2D([0], [0], color=colors['ssp585'], lw=1, label='SSP5-8.5'),\n",
+    "    Line2D([0], [0], color=colors['ssp370'], lw=1, label='SSP3-7.0'),\n",
+    "    Line2D([0], [0], color=colors['ssp245'], lw=1, label='SSP2-4.5'),\n",
+    "    Line2D([0], [0], color=colors['ssp126'], lw=1, label='SSP1-2.6'),\n",
+    "    Line2D([0], [0], color=colors['ssp119'], lw=1, label='SSP1-1.9'),\n",
+    "]\n",
+    "\n",
+    "ax[1].legend(handles=legend_elements, loc='upper left', frameon=False)\n",
+    "#pl.title('SSP5-8.5 median CO2 concentration')\n",
+    "\n",
+    "fig.tight_layout()\n",
+    "\n",
+    "os.makedirs('../plots', exist_ok=True)\n",
+    "pl.savefig('../plots/co2_emis_conc.png')\n",
+    "pl.savefig('../plots/co2_emis_conc.pdf')"
    ]
   },
   {
@@ -254,47 +439,49 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "for scenario in ['ssp119', 'ssp126', 'ssp245', 'ssp370', 'ssp585']:\n",
+    "    pl.plot(\n",
+    "        np.arange(2014.5, 2031), (\n",
+    "            ds_140.emissions.loc[dict(specie='CO2', scenario=scenario, config=0, timepoint=np.arange(2014.5, 2031))]\n",
+    "        ),\n",
+    "        color=colors[scenario],\n",
+    "        label='v1.4.0 (RCMIP)',\n",
+    "        ls=':'\n",
+    "    );\n",
+    "    pl.plot(\n",
+    "        np.arange(2022.5, 2031), (\n",
+    "            ds_141.emissions.loc[dict(specie='CO2', scenario=scenario, config=0, timepoint=np.arange(2022.5, 2031))]\n",
+    "        ),\n",
+    "        color=colors[scenario],\n",
+    "        label='v1.4.1 (GCP)'\n",
+    "    );\n",
+    "# overwrite history in black\n",
     "pl.plot(\n",
-    "    ds_140.timepoint, (\n",
-    "        ds_140.emissions.loc[dict(specie='CO2', scenario='ssp119', config=0)]\n",
+    "    np.arange(1999.5, 2015), (\n",
+    "        ds_140.emissions.loc[dict(specie='CO2', scenario=scenario, config=0, timepoint=np.arange(1999.5, 2015))]\n",
     "    ),\n",
     "    color='k',\n",
-    "    label='v1.4.0 (RCMIP)'\n",
+    "    label='v1.4.0 (RCMIP)',\n",
+    "    ls=':'\n",
     ");\n",
     "pl.plot(\n",
-    "    ds_141.timepoint, (\n",
-    "        ds_141.emissions.loc[dict(specie='CO2', scenario='ssp119', config=0)]\n",
+    "    np.arange(1999.5, 2023), (\n",
+    "        ds_141.emissions.loc[dict(specie='CO2', scenario=scenario, config=0, timepoint=np.arange(1999.5, 2023))]\n",
     "    ),\n",
-    "    color='r',\n",
+    "    color='k',\n",
     "    label='v1.4.1 (GCP)'\n",
-    ");\n"
+    ");\n",
+    "pl.xlim(2000, 2030)\n",
+    "pl.ylim(25, 50)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f45a1c36-193e-4194-8902-399fa8686d6f",
+   "id": "748e845a-7407-4942-bc58-c5a5c9382abe",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "f.emissions[250, :, 0, 0]\n",
-    "# differences in ssp119 CO2 FFI\n",
-    "pl.plot(np.arange(1950.5, 2050), f.emissions[200:300, 0, 0, 0], label='ssp119_v1.4.1 (GCP 2023)')\n",
-    "pl.plot(np.arange(1950.5, 2050), f.emissions[200:300, 8, 0, 0], label='ssp119_v1.4.0 (RCMIP)')\n",
-    "pl.legend()\n",
-    "# differences in ssp119 CO2 AFOLU\n",
-    "pl.plot(np.arange(1950.5, 2050), f.emissions[200:300, 0, 0, 1], label='ssp119_v1.4.1 (GCP 2023)')\n",
-    "pl.plot(np.arange(1950.5, 2050), f.emissions[200:300, 8, 0, 1], label='ssp119_v1.4.0 (RCMIP)')\n",
-    "pl.legend()\n",
-    "# differences in ssp119 CO2 total\n",
-    "pl.plot(np.arange(1950.5, 2050), f.emissions[200:300, 0, 0, 0:2].sum(axis=-1), label='ssp119_v1.4.1 (GCP 2023)')\n",
-    "pl.plot(np.arange(1950.5, 2050), f.emissions[200:300, 8, 0, 0:2].sum(axis=-1), label='ssp119_v1.4.0 (RCMIP)')\n",
-    "pl.legend()\n",
-    "# differences in ssp119 cumulative CO2 total\n",
-    "pl.plot(np.arange(1750.5, 2050), np.cumsum(f.emissions[:300, 0, 0, 0:2].sum(axis=-1), axis=0), label='ssp119_v1.4.1 (GCP 2023)')\n",
-    "pl.plot(np.arange(1750.5, 2050), np.cumsum(f.emissions[:300, 8, 0, 0:2].sum(axis=-1), axis=0), label='ssp119_v1.4.0 (RCMIP)')\n",
-    "pl.legend()"
-   ]
+   "source": []
   }
  ],
  "metadata": {
