--- a/notebooks/analyse.ipynb
+++ b/notebooks/analyse.ipynb
@@ -33,7 +33,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "load_dotenv()\n",
+    "load_dotenv(override=True)\n",
     "datadir = os.getenv(\"DATADIR\")"
    ]
   },
@@ -435,6 +435,62 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "8a4a697d-62a8-4463-bb96-895b7a2e02ef",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, ax = pl.subplots(figsize=(9/2.54, 9/2.54))\n",
+    "\n",
+    "ax.plot(\n",
+    "    np.arange(1750.5, 2023), (\n",
+    "        ds_140.emissions.loc[dict(specie='CO2', scenario='ssp245', config=0, timepoint=np.arange(1750.5, 2023))]\n",
+    "    ),\n",
+    "    color='k',\n",
+    "    label='v1.4.0 (RCMIP)',\n",
+    ");\n",
+    "ax.plot(\n",
+    "    np.arange(1750.5, 2023), (\n",
+    "        ds_141.emissions.loc[dict(specie='CO2', scenario='ssp245', config=0, timepoint=np.arange(1750.5, 2023))]\n",
+    "    ),\n",
+    "    color='r',\n",
+    "    label='v1.4.1 (GCP)'\n",
+    ");\n",
+    "ax.set_xlim(1750, 2023)\n",
+    "ax.set_ylim(0, 45)\n",
+    "ax.set_ylabel('Gt CO$_2$ yr$^{-1}$')\n",
+    "ax.set_title('CO$_2$ emissions')\n",
+    "ax.legend()\n",
+    "\n",
+    "fig.tight_layout()\n",
+    "\n",
+    "os.makedirs('../plots', exist_ok=True)\n",
+    "pl.savefig('../plots/co2_emis.png')\n",
+    "#pl.savefig('../plots/co2_emis_conc.pdf')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "36999327-bc8f-4463-a623-a79e00745102",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ds_140.cumulative_emissions.loc[dict(specie='CO2', scenario='ssp245', config=0, timebound=2023)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cb5f407c-11a1-439d-95fb-94489c7ab28a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ds_141.cumulative_emissions.loc[dict(specie='CO2', scenario='ssp245', config=0, timebound=2023)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "2f61a270-125e-4a22-8b4c-09bf86524b6f",
    "metadata": {},
    "outputs": [],
@@ -486,9 +542,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": ".conda-fair-calibrate-v1.4-comparison Python (Conda)",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-.conda-fair-calibrate-v1.4-comparison-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -500,7 +556,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
