--- a/notebooks/ebm-compare.ipynb
+++ b/notebooks/ebm-compare.ipynb
@@ -36,7 +36,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "load_dotenv()\n",
+    "load_dotenv(override=True)\n",
     "datadir = os.getenv(\"DATADIR\")\n",
     "os.makedirs(datadir, exist_ok=True)"
    ]
@@ -457,9 +457,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": ".conda-fair-calibrate-v1.4-comparison Python (Conda)",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-.conda-fair-calibrate-v1.4-comparison-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -471,7 +471,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
