--- a/notebooks/ebm.ipynb
+++ b/notebooks/ebm.ipynb
@@ -218,9 +218,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": ".conda-fair-calibrate-v1.4-comparison Python (Conda)",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-.conda-fair-calibrate-v1.4-comparison-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -232,7 +232,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
