--- a/notebooks/run.ipynb
+++ b/notebooks/run.ipynb
@@ -36,9 +36,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "load_dotenv()\n",
+    "load_dotenv(override=True)\n",
     "datadir = os.getenv(\"DATADIR\")\n",
-    "os.makedirs(datadir, exist_ok=True)"
+    "os.makedirs(datadir, exist_ok=True)\n",
+    "datadir"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "59ed7132-0cb8-4844-ae1b-61cf5cb52ef0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pl.style.use('../defaults.mplstyle')"
    ]
   },
   {
@@ -771,13 +782,21 @@
    "source": [
     "f.to_netcdf(os.path.join(datadir, 'calibration_v1.4.0.nc'))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5718f446-86a1-4472-b14d-1c51b97fd716",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": ".conda-fair-calibrate-v1.4-comparison Python (Conda)",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-.conda-fair-calibrate-v1.4-comparison-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -789,7 +808,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
