a few more comparison plots

--- a/notebooks/analyse.ipynb
+++ b/notebooks/analyse.ipynb
@@ -268,10 +268,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "25098416-f551-49af-a8e5-0cd7f5aeae62",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_cmip6 = pd.read_csv('../data/concentrations/co2_concentrations.csv')\n",
+    "df_igcc = pd.read_csv('../data/concentrations/co2_concentrations_igcc2023.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "99e210b4-876e-404c-b535-af736605ad74",
    "metadata": {},
    "outputs": [],
    "source": [
+    "fig, ax = pl.subplots(figsize=(9/2.54, 9/2.54))\n",
     "pl.fill_between(\n",
     "    ds_140.timebound,\n",
     "    ds_140.concentration.loc[dict(specie='CO2', scenario='ssp119')].quantile(0.05, dim='config'),\n",
@@ -303,19 +315,75 @@
     "    color='r',\n",
     "    label='v1.4.1 (GCP)'\n",
     ");\n",
+    "pl.plot(\n",
+    "    np.arange(1750.5, 2101),\n",
+    "    df_cmip6.loc[df_cmip6['Scenario']=='ssp119', '1750':'2100'].values.squeeze(),\n",
+    "    color=colors['ssp119'],\n",
+    "    label='CMIP6',\n",
+    "    alpha=0.5\n",
+    ")\n",
+    "pl.plot(\n",
+    "    np.arange(1850.5, 2023),\n",
+    "    df_igcc['CO2'].values.squeeze()[1:],\n",
+    "    color='g',\n",
+    "    label='IGCC, 2022',\n",
+    "    alpha=0.5\n",
+    ")\n",
+    "pl.ylabel('ppm')\n",
     "pl.xlim(1750, 2100)\n",
-    "#pl.legend()\n",
-    "pl.title('SSP1-1.9 median CO2 concentration')"
+    "pl.legend()\n",
+    "pl.title('historical + SSP1-1.9 CO$_2$ concentration')\n",
+    "fig.tight_layout()\n",
+    "pl.savefig('../plots/co2_conc.png')\n",
+    "pl.savefig('../plots/co2_conc.pdf')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25098416-f551-49af-a8e5-0cd7f5aeae62",
+   "id": "fe5a9265-a5b4-407e-85e2-12ac884fec24",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_cmip6 = pd.read_csv('../data/concentrations/co2_concentrations.csv')"
+    "fig, ax = pl.subplots(figsize=(9/2.54, 9/2.54))\n",
+    "pl.fill_between(\n",
+    "    ds_140.timebound,\n",
+    "    ds_140.airborne_fraction.loc[dict(specie='CO2', scenario='ssp119')].quantile(0.05, dim='config'),\n",
+    "    ds_140.airborne_fraction.loc[dict(specie='CO2', scenario='ssp119')].quantile(0.95, dim='config'),\n",
+    "    color='k',\n",
+    "    alpha=0.1,\n",
+    "    lw=0\n",
+    ");\n",
+    "pl.plot(\n",
+    "    ds_140.timebound, (\n",
+    "        ds_140.airborne_fraction.loc[dict(specie='CO2', scenario='ssp119')]\n",
+    "    ).median(dim='config'),\n",
+    "    color='k',\n",
+    "    label='v1.4.0 (RCMIP)'\n",
+    ");\n",
+    "\n",
+    "pl.fill_between(\n",
+    "    ds_141.timebound,\n",
+    "    ds_141.airborne_fraction.loc[dict(specie='CO2', scenario='ssp119')].quantile(0.05, dim='config'),\n",
+    "    ds_141.airborne_fraction.loc[dict(specie='CO2', scenario='ssp119')].quantile(0.95, dim='config'),\n",
+    "    color='r',\n",
+    "    alpha=0.1,\n",
+    "    lw=0\n",
+    ");\n",
+    "pl.plot(\n",
+    "    ds_141.timebound, (\n",
+    "        ds_141.airborne_fraction.loc[dict(specie='CO2', scenario='ssp119')]\n",
+    "    ).median(dim='config'),\n",
+    "    color='r',\n",
+    "    label='v1.4.1 (GCP)'\n",
+    ");\n",
+    "pl.xlim(1750, 2023)\n",
+    "pl.ylim(0, 1)\n",
+    "pl.legend()\n",
+    "pl.title('Airborne fraction')\n",
+    "fig.tight_layout()\n",
+    "pl.savefig('../plots/airborne_fraction.png')\n",
+    "pl.savefig('../plots/airborne_fraction.pdf')"
    ]
   },
   {
@@ -465,7 +533,7 @@
     "\n",
     "os.makedirs('../plots', exist_ok=True)\n",
     "pl.savefig('../plots/co2_emis.png')\n",
-    "#pl.savefig('../plots/co2_emis_conc.pdf')"
+    "pl.savefig('../plots/co2_emis.pdf')"
    ]
   },
   {
