Add CO2 and CH4 emissions comparisions

--- a/notebooks/analyse.ipynb
+++ b/notebooks/analyse.ipynb
@@ -514,14 +514,14 @@
     "        ds_140.emissions.loc[dict(specie='CO2', scenario='ssp245', config=0, timepoint=np.arange(1750.5, 2023))]\n",
     "    ),\n",
     "    color='k',\n",
-    "    label='v1.4.0 (RCMIP)',\n",
+    "    label='v1.4.0 (RCMIP Historical + SSP2-4.5)',\n",
     ");\n",
     "ax.plot(\n",
     "    np.arange(1750.5, 2023), (\n",
     "        ds_141.emissions.loc[dict(specie='CO2', scenario='ssp245', config=0, timepoint=np.arange(1750.5, 2023))]\n",
     "    ),\n",
     "    color='r',\n",
-    "    label='v1.4.1 (GCP)'\n",
+    "    label='v1.4.1 (Global Carbon Project)'\n",
     ");\n",
     "ax.set_xlim(1750, 2023)\n",
     "ax.set_ylim(0, 45)\n",
@@ -534,6 +534,98 @@
     "os.makedirs('../plots', exist_ok=True)\n",
     "pl.savefig('../plots/co2_emis.png')\n",
     "pl.savefig('../plots/co2_emis.pdf')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "529430be-bca9-4e2e-b8df-e410e35fbe8d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, ax = pl.subplots(figsize=(9/2.54, 9/2.54))\n",
+    "\n",
+    "ax.plot(\n",
+    "    np.arange(1750.5, 2023), (\n",
+    "        ds_140.emissions.loc[dict(specie='CH4', scenario='ssp245', config=0, timepoint=np.arange(1750.5, 2023))]\n",
+    "    ),\n",
+    "    color='k',\n",
+    "    label='v1.4.0 (RCMIP Historical + SSP2-4.5)',\n",
+    ");\n",
+    "ax.plot(\n",
+    "    np.arange(1750.5, 2023), (\n",
+    "        ds_141.emissions.loc[dict(specie='CH4', scenario='ssp245', config=0, timepoint=np.arange(1750.5, 2023))]\n",
+    "    ),\n",
+    "    color='r',\n",
+    "    label='v1.4.1 (PRIMAP-HistTP)'\n",
+    ");\n",
+    "ax.set_xlim(1750, 2023)\n",
+    "ax.set_ylim(0, 400)\n",
+    "ax.set_ylabel('Mt CH$_4$ yr$^{-1}$')\n",
+    "ax.set_title('CH$_4$ emissions')\n",
+    "ax.legend()\n",
+    "\n",
+    "fig.tight_layout()\n",
+    "\n",
+    "os.makedirs('../plots', exist_ok=True)\n",
+    "pl.savefig('../plots/ch4_emis.png')\n",
+    "pl.savefig('../plots/ch4_emis.pdf')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6b2d03b5-562a-4f86-b3d3-1e943bf0f469",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, ax = pl.subplots(1, 2, figsize=(18/2.54, 9/2.54))\n",
+    "\n",
+    "ax[0].plot(\n",
+    "    np.arange(1750.5, 2023), (\n",
+    "        ds_140.emissions.loc[dict(specie='CO2', scenario='ssp245', config=0, timepoint=np.arange(1750.5, 2023))]\n",
+    "    ),\n",
+    "    color='k',\n",
+    "    label='v1.4.0 (RCMIP Historical + SSP2-4.5)',\n",
+    ");\n",
+    "ax[0].plot(\n",
+    "    np.arange(1750.5, 2023), (\n",
+    "        ds_141.emissions.loc[dict(specie='CO2', scenario='ssp245', config=0, timepoint=np.arange(1750.5, 2023))]\n",
+    "    ),\n",
+    "    color='r',\n",
+    "    label='v1.4.1 (Global Carbon Project)'\n",
+    ");\n",
+    "ax[0].set_xlim(1750, 2023)\n",
+    "ax[0].set_ylim(0, 45)\n",
+    "ax[0].set_ylabel('Gt CO$_2$ yr$^{-1}$')\n",
+    "ax[0].set_title('(a) CO$_2$ emissions')\n",
+    "ax[0].legend(frameon=False)\n",
+    "\n",
+    "ax[1].plot(\n",
+    "    np.arange(1750.5, 2023), (\n",
+    "        ds_140.emissions.loc[dict(specie='CH4', scenario='ssp245', config=0, timepoint=np.arange(1750.5, 2023))]\n",
+    "    ),\n",
+    "    color='k',\n",
+    "    label='v1.4.0 (RCMIP Historical + SSP2-4.5)',\n",
+    ");\n",
+    "ax[1].plot(\n",
+    "    np.arange(1750.5, 2023), (\n",
+    "        ds_141.emissions.loc[dict(specie='CH4', scenario='ssp245', config=0, timepoint=np.arange(1750.5, 2023))]\n",
+    "    ),\n",
+    "    color='r',\n",
+    "    label='v1.4.1 (PRIMAP-HistTP)'\n",
+    ");\n",
+    "ax[1].set_xlim(1750, 2023)\n",
+    "ax[1].set_ylim(0, 450)\n",
+    "ax[1].set_ylabel('Mt CH$_4$ yr$^{-1}$')\n",
+    "ax[1].set_title('(b) CH$_4$ emissions')\n",
+    "ax[1].legend(frameon=False)\n",
+    "\n",
+    "fig.tight_layout()\n",
+    "\n",
+    "os.makedirs('../plots', exist_ok=True)\n",
+    "pl.savefig('../plots/co2_ch4_emis.png')\n",
+    "pl.savefig('../plots/co2_ch4_emis.pdf')"
    ]
   },
   {
@@ -610,9 +702,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".conda-fair-calibrate-v1.4-comparison Python (Conda)",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "conda-env-.conda-fair-calibrate-v1.4-comparison-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -624,7 +716,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
